@@ -1,5 +1,6 @@
         - korapxml2conllu: use morpho.xml if present when run on base zips
         - korapxml2conllu: new option -c <columns>
+        - conllu2korapxml: ignore _-lemmas
 
 0.4.1 2021-07-31
         - korapxml2conllu: fix patterns not extracted for last texts in archive
